--- a/src/lib/assets/chessground.base.css
+++ b/src/lib/assets/chessground.base.css
@@ -1,10 +1,10 @@
-.cg-wrap {
+.cg-default-style.cg-wrap {
   box-sizing: content-box;
   position: relative;
   display: block;
 }
 
-cg-container {
+.cg-default-style cg-container {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -12,7 +12,7 @@ cg-container {
   top: 0;
 }
 
-cg-board {
+.cg-default-style cg-board {
   position: absolute;
   top: 0;
   left: 0;
@@ -26,11 +26,11 @@ cg-board {
   background-size: cover;
 }
 
-.cg-wrap.manipulable cg-board {
+.cg-default-style.cg-wrap.manipulable cg-board {
   cursor: pointer;
 }
 
-cg-board square {
+.cg-default-style cg-board square {
   position: absolute;
   top: 0;
   left: 0;
@@ -39,15 +39,15 @@ cg-board square {
   pointer-events: none;
 }
 
-cg-board square.move-dest {
+.cg-default-style cg-board square.move-dest {
   pointer-events: auto;
 }
 
-cg-board square.last-move {
+.cg-default-style cg-board square.last-move {
   will-change: transform;
 }
 
-.cg-wrap piece {
+.cg-default-style.cg-wrap piece {
   position: absolute;
   top: 0;
   left: 0;
@@ -59,26 +59,26 @@ cg-board square.last-move {
   pointer-events: none;
 }
 
-cg-board piece.dragging {
+.cg-default-style cg-board piece.dragging {
   cursor: move;
   /* !important to override z-index from 3D piece inline style */
   z-index: 11 !important;
 }
 
-piece.anim {
+.cg-default-style piece.anim {
   z-index: 8;
 }
 
-piece.fading {
+.cg-default-style piece.fading {
   z-index: 1;
   opacity: 0.5;
 }
 
-.cg-wrap piece.ghost {
+.cg-default-style.cg-wrap piece.ghost {
   opacity: 0.3;
 }
 
-.cg-wrap piece svg {
+.cg-default-style.cg-wrap piece svg {
   overflow: hidden;
   position: relative;
   top: 0px;
@@ -90,9 +90,9 @@ piece.fading {
   opacity: 0.6;
 }
 
-.cg-wrap cg-auto-pieces,
-.cg-wrap .cg-shapes,
-.cg-wrap .cg-custom-svgs {
+.cg-default-style.cg-wrap cg-auto-pieces,
+.cg-default-style.cg-wrap .cg-shapes,
+.cg-default-style.cg-wrap .cg-custom-svgs {
   overflow: visible;
   position: absolute;
   top: 0px;
@@ -102,30 +102,30 @@ piece.fading {
   pointer-events: none;
 }
 
-.cg-wrap cg-auto-pieces {
+.cg-default-style.cg-wrap cg-auto-pieces {
   z-index: 2;
 }
 
-.cg-wrap cg-auto-pieces piece {
+.cg-default-style.cg-wrap cg-auto-pieces piece {
   opacity: 0.3;
 }
 
-.cg-wrap .cg-shapes {
+.cg-default-style.cg-wrap .cg-shapes {
   overflow: hidden;
   opacity: 0.6;
   z-index: 2;
 }
 
-.cg-wrap .cg-custom-svgs {
+.cg-default-style.cg-wrap .cg-custom-svgs {
   /* over piece.anim = 8, but under piece.dragging = 11 */
   z-index: 9;
 }
 
-.cg-wrap .cg-custom-svgs svg {
+.cg-default-style.cg-wrap .cg-custom-svgs svg {
   overflow: visible;
 }
 
-.cg-wrap coords {
+.cg-default-style.cg-wrap coords {
   position: absolute;
   display: flex;
   pointer-events: none;
@@ -134,7 +134,7 @@ piece.fading {
   font-size: 9px;
 }
 
-.cg-wrap coords.ranks {
+.cg-default-style.cg-wrap coords.ranks {
   left: 4px;
   top: -20px;
   flex-flow: column-reverse;
@@ -142,16 +142,16 @@ piece.fading {
   width: 12px;
 }
 
-.cg-wrap coords.ranks.black {
+.cg-default-style.cg-wrap coords.ranks.black {
   flex-flow: column;
 }
 
-.cg-wrap coords.ranks.left {
+.cg-default-style.cg-wrap coords.ranks.left {
   left: -15px;
   align-items: flex-end;
 }
 
-.cg-wrap coords.files {
+.cg-default-style.cg-wrap coords.files {
   bottom: -4px;
   left: 24px;
   flex-flow: row;
@@ -161,14 +161,14 @@ piece.fading {
   text-align: center;
 }
 
-.cg-wrap coords.files.black {
+.cg-default-style.cg-wrap coords.files.black {
   flex-flow: row-reverse;
 }
 
-.cg-wrap coords coord {
+.cg-default-style.cg-wrap coords coord {
   flex: 1 1 auto;
 }
 
-.cg-wrap coords.ranks coord {
+.cg-default-style.cg-wrap coords.ranks coord {
   transform: translateY(39%);
 }
